# ParallelMatrixMultiplication

./: .gitignore  README.md  check.txt  res.txt
src/cuda/: CMakeLists.txt  gpu_results_final.csv  kernel.cu  kernel.h  matrix_mult  matrix_mult.cu  matrix_mult.nvprof
src/mpi/: Makefile  appunti_scalapack.txt  backup.c  build_graphs.ipynb  collect_data.py  generate_cmd_lines.py  main.cpp  mat_mul.c  mat_mul.cpp  mat_mul.h  matrix_vector.c  run_test.py  test.c
src/mpi/data/matrix/: mat1_5x7  mat1_7x5  mat2_7x7  mat2_7x9
src/mpi/data/matrix/txt/: mat1_16x8.txt  mat1_4x4.txt  mat1_5x5.txt  mat1_5x7.txt  mat1_7x7.txt  mat1_8x6.txt  mat1_8x7.txt  mat1_8x8.txt  mat2_4x4.txt  mat2_5x5.txt  mat2_5x7.txt  mat2_6x8.txt  mat2_7x4.txt  mat2_7x5.txt  mat2_7x7.txt  mat2_7x8.txt  mat2_8x16.txt  mat2_8x8.txt  mat3_5x4.txt
src/mpi/mat_generator/: Makefile  generate_matrix.py  generate_test.py  main  main.c  main.cpp  mat_generator.c  mat_generator.cpp  mat_generator.h
src/mpi/util/: utils.c  utils.h
src/mpi_cuda/: Makefile  cuda_prova.cu  mpi_prova.cpp
src/mpi_cuda/cuda/: CMakeLists.txt  cuda_prova.cu  cuda_prova.h
